[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'testq-runtime-wasm'
version = '1.0.0'
[dependencies.testq-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['testq-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
